# ManaStorm-Engine

./: .gitignore  CMakeLists.txt  Git Bash.lnk  READMELATER.txt  attribution.txt  tmap_gen_2.py  tmap_generator.py  tmap_struct.txt
src/: GameMeta.cpp  GameMeta.hpp  PhysicsManager.cpp  PhysicsManager.hpp  game_process.cpp  game_process.hpp  main.cpp  tmap_parser.cpp  tmap_parser.hpp
src/config/: EngineConfig.cpp  EngineConfig.hpp
src/graphics/: TextureManager.cpp  TextureManager.hpp  render.cpp  render.hpp  window.cpp  window.hpp
src/input/: InputManager.cpp  InputManager.hpp  input.cpp  input_manager.cpp  input_manager.hpp
